--- a/src/style/base.css
+++ b/src/style/base.css
@@ -7,7 +7,7 @@ label, p{
   display: inline-block;
 }
 
-.container{
+page, .container{
   background-color: #F1F1F1;
 }
 
@@ -54,215 +54,6 @@ label, p{
   width: 100%;
   height: 100%;
 }
-
-/* pe form */
-
-.pe-form{
-  width: 100%;
-  padding: 80rpx 30rpx;
-  box-sizing: border-box;
-}
-
-.pe-form .form-item{
-  width: 690rpx;
-  height: 110rpx;
-  background-color: #EFEFF4;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 28rpx;
-  border-radius: 10rpx;
-}
-
-.pe-form .form-item:nth-child(n+2){
-  margin-top: 30rpx;
-}
-
-.pe-form .form-item .form-label{
-  padding-right: 1em;
-  box-sizing: border-box;
-  color: #0BC99D;
-  border-right: 1px solid #0BC99D;
-  width: 6em;
-  text-align: right;
-}
-
-.pe-form .form-item .form-value{
-  flex: 1;
-  width: 100%;
-  height: 100%;
-  padding: 0 20rpx;
-  color: #222222;
-  display: flex;
-  align-items: center;
-}
-
-.pe-form .form-item:not(.form-item-resize) .form-value input, .pe-form .form-item:not(.form-item-resize) .form-value picker{
-  width: 100%;
-  height: 110rpx;
-  line-height: 110rpx;
-}
-
-.pe-form .form-item .form-value picker{
-  width: 100%;
-}
-
-.pe-form .form-item .form-value .picker{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 110rpx;
-  line-height: 110rpx;
-  align-items: center;
-}
-
-.pe-form .form-item .form-value .picker p{
-  flex: 1;
-  width: 100%;
-  height: 110rpx;
-  overflow: hidden;
-}
-
-.pe-form .form-item .form-value .picker p.picker-placeholder{
-  color: #7d7e80;
-}
-
-.pe-form .form-item .form-value .picker-icon-arrow{
-  width: 20rpx;
-  height: 20rpx;
-}
-
-.pe-form .form-agreements-wrapper{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  line-height: 60rpx;
-  padding-top: 30rpx;
-}
-
-.pe-form .form-agreements-wrapper .form-agreement-image{
-  width: 60rpx;
-  height: 60rpx;
-}
-
-.pe-form .form-agreements-wrapper .form-agreement-link{
-  font-size: 26rpx;
-  color: #0BC99D;
-  text-decoration: underline;
-  margin-left: 20rpx;
-}
-
-.pe-form .submit-btn{
-  width: 100%;
-  height: 94rpx;
-  background: linear-gradient(90deg,rgba(11,201,157,1),rgba(4,216,139,1));
-  border-radius: 47rpx;
-  color: #FFFFFF;
-  line-height: 94rpx;
-  font-size: 38rpx;
-  box-sizing: border-box;
-  border: none;
-  margin-top: 30rpx;
-}
-
-.pe-form .submit-btn:before{
-  border: none;
-}
-
-.pe-form .form-item.form-item-resize{
-  height: auto;
-  /*background-color: #FFFFFF;*/
-  align-items: unset;
-}
-
-.pe-form .form-item.form-item-resize .form-resize-label{
-  height: 110rpx;
-  display: flex;
-  align-items: center;
-}
-
-.pe-form .form-item.form-item-resize .form-value{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20rpx 0;
-}
-
-.pe-form .form-item.form-item-resize.form-item-column{
-  display: flex;
-  flex-direction: column;
-}
-
-.pe-form .form-upload-wrapper{
-
-}
-
-.pe-form .form-upload-wrapper .form-upload-btn{
-  width: 300rpx;
-  height: 300rpx;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px dashed #0BC99D;
-  border-radius:10rpx;
-}
-
-.pe-form .form-upload-wrapper .form-upload-image{
-  width: 300rpx;
-  height: 300rpx;
-  display: flex;
-  border: 1px dashed #0BC99D;
-  border-radius:10rpx;
-}
-
-.pe-form .form-upload-wrapper .form-upload-btn image{
-  width: 200rpx;
-  height: 200rpx;
-}
-
-/* pe form */
-
-/* pe cell list */
-
-.pe-cell-list{
-  width: 100%;
-  padding: 80rpx 30rpx;
-  box-sizing: border-box;
-}
-
-.pe-cell-list .cell-item{
-  width: 690rpx;
-  height: 80rpx;
-  /*background-color: #EFEFF4;*/
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 28rpx;
-  border-bottom: 1px solid #F4F4F4;
-}
-.pe-cell-list .cell-item label{
-  padding-right: 1em;
-  box-sizing: border-box;
-  color: #0BC99D;
-  border-right: 2rpx solid #0BC99D;
-  width: 6em;
-  text-align: right;
-}
-.pe-cell-list .cell-item .value{
-  flex: 1;
-  width: 100%;
-  height: 100%;
-  padding: 0 20rpx;
-  color: #222222;
-  display: flex;
-  align-items: center;
-}
-.pe-cell-list .cell-actions{
-  margin-top: 50rpx;
-}
-
-/* pe cell list */
 
 /* setpper */
 
